syntax = "proto3";
option java_package = "com.tcfeng.starter.protobuf.health";
option java_multiple_files = true;

message HealthCheckRequestVO {
    string service = 1;
    int64 sendTime  = 2;
}

message HealthCheckResponseVO {
    enum ServingStatus {
      UNKNOWN = 0;
      SERVING = 1;
      NOT_SERVING = 2;
      SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
    }
    ServingStatus status = 1;
    int64 receiveTime = 2;
}


service Health {
    rpc Check(HealthCheckRequestVO) returns (HealthCheckResponseVO);
    
    rpc Watch(HealthCheckRequestVO) returns (stream HealthCheckResponseVO);
}